1. Метод .of [#70623 #464851] исправление1