@@ -10,7 +10,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = List.of("k1/sk1", "k2/sk1");
+        List<String> input = Arrays.asList("k1/sk1", "k2/sk1");
         List<String> expect = List.of("k1", "k1/sk1", "k2", "k2/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsSequence(expect);
@@ -18,7 +18,7 @@ class DepartmentsTest {
 
     @Test
     public void whenNoChange() {
-        List<String> input = List.of("k1", "k1/sk1");
+        List<String> input = Arrays.asList("k1", "k1/sk1");
         List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsSequence(expect);
@@ -26,7 +26,7 @@ class DepartmentsTest {
 
     @Test
     public void whenMissedSomeDepartmentsCode() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "k1/sk1/ssk1",
                 "k1/sk1/ssk2",
                 "k2/sk1/ssk1"
@@ -57,7 +57,7 @@ class DepartmentsTest {
                 "k2/sk1/ssk2",
                 "k2/sk1/ssk1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k1",
                 "k1/sk1",
                 "k1/sk1/ssk1",
@@ -82,7 +82,7 @@ class DepartmentsTest {
                 "k2/sk1/ssk2",
                 "k2/sk1/ssk1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k1/sk1/ssk1",
                 "k1/sk1/ssk2",
                 "k1/sk2",
@@ -107,7 +107,7 @@ class DepartmentsTest {
                 "k2/sk1/ssk2",
                 "k2/sk1/ssk1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k2",
                 "k2/sk1",
                 "k2/sk1/ssk1",
@@ -133,7 +133,7 @@ class DepartmentsTest {
                 "k2/sk1/ssk2",
                 "k2/sk1/ssk1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k2/sk1",
                 "k2/sk1/ssk1",
                 "k2/sk1/ssk2",
